kubernetes/ingress/phpmyadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-svc
spec:
  type: NodePort
  selector:
    app: phpmyadmin
  ports:
    - port: 80
