kubernetes/ingress/name-based-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: name-based-routing-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "nginx.nestcloud.icu"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nginx-svc
                port:
                  number: 80
    - host: "httpd.nestcloud.icu"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: httpd-svc
                port:
                  number: 80
    - host: "phpmyadmin.nestcloud.icu"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: phpmyadmin-svc
                port:
                  number: 80
